--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,9 @@
 
       <footer>
         <hr />
-        <p>You can find me on <a href="https://www.facebook.com/vozniak.vol">Facebook, Github</a> &copy; 2016</p>
+        <p>You can find me on <a href="https://www.facebook.com/vozniak.vol"><img src="/static/Facebook.png" width="18" height="18"><img></a>
+                              <a href="https://www.github.com/volvoz"><img src="/static/Github.png" width="18" height="18"><img></a>
+                              &copy; 2016</p>
       </footer>
     </div>
   </body>
